fixed responsiveness and overflow issue on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
 /* Main container */
 .container {
-  width: min(90%, var(--max-width));
+  max-width: 1240px;
   height: 100dvh;
-  margin: 0 auto;
-  padding-inline: clamp(1.25rem, 5vw, 3.5rem);
+  margin-inline: auto;
+  padding-inline: 32px;
   padding-block: clamp(3rem, 8vh, 5rem);
   justify-content: center;
   align-items: center;
@@ -155,8 +155,8 @@ button {
 /* Mobile Landscape */
 @media screen and (max-width: 960px) {
   .container {
-    width: min(95%, var(--max-width));
-    padding-inline: max(1.25rem, 5vw);
+    max-width: none;
+    padding-inline: 56px;
     height: auto;
   }
 
@@ -171,6 +171,25 @@ button {
 
   button {
     margin-top: 4rem;
+  }
+}
+
+/* Mobile - Landcape CSS */
+@media screen and (max-width: 767px) {
+  .container {
+    padding-inline: 2rem;
+  }
+}
+
+/* Mobile - Portrait CSS */
+@media screen and (max-width: 479px) {
+  .container {
+    padding-inline: 0.5rem;
+  }
+
+  .calculator {
+    max-width: none;
+    padding-inline: 1.25rem;
   }
 }
 
