--- a/src/index.css
+++ b/src/index.css
@@ -5,12 +5,16 @@ html {
   font-size: 16px;
   scroll-behavior: smooth;
   background-color: var(--color-grey-200);
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 :root {
   font-family: monospace, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.6;
   font-weight: 400;
+  max-width: 100vw;
+  overflow-x: hidden;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -31,6 +35,8 @@ html {
 
 body {
   color: #333;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 * {
